Kube/deploymentbeta.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daprsignalrbeta-deployment
  labels:
    app: daprsignalrbeta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daprsignalrbeta
  template:
    metadata:
      labels:
        app: daprsignalrbeta
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "daprsignalrbeta"
        dapr.io/app-port: "80"
    spec:
      containers:
        - name: daprsignalrbeta
          image: c2testcr.azurecr.io/daprsignalrbeta
          ports:
            - containerPort: 80
