Kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: daprsignalrbeta-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
    - host: daprsignalrbeta.local
      http:
        paths:
          - path: /
            backend:
              serviceName: daprsignalrbeta-service
              servicePort: 80
